fix nuxt/content code block style

--- a/content/blog/20251024_01.md
+++ b/content/blog/20251024_01.md
@@ -47,26 +47,25 @@ readTime: 3
 
 ## コードブロック
 
-一応、コードも書けるよってアピール。まあ、ChatGPTに書いてもらったやつですけどね。
+フィボちゃん。
 
-```javascript
-// 典型的なバグの書き方
-function calculateTotal(items) {
-  let total = 0;
-  for (let i = 0; i <= items.length; i++) {
-    // <= がバグの原因（あるある）
-    total += items[i];
-  }
-  return total;
+```js [fibo.js]
+// 典型的なフィボナッチ（遅い版）
+function fibonacci(n) {
+  if (n <= 1) return n;
+  return fibonacci(n - 1) + fibonacci(n - 2);
+  // O(2^n)で激重（あるある）
 }
 
-// デバッグ後
-function calculateTotalFixed(items) {
-  return items.reduce((sum, item) => sum + item, 0);
+// 改良版（メモ化）
+function fibonacciOptimized(n, memo = {}) {
+  if (n in memo) return memo[n];
+  if (n <= 1) return n;
+
+  memo[n] = fibonacciOptimized(n - 1, memo) + fibonacciOptimized(n - 2, memo);
+  return memo[n];
 }
 ```
-
-配列の範囲外エラーとか、新人の頃によくやりました。今でもたまにやります。
 
 ## 引用
 
@@ -107,6 +106,6 @@ function calculateTotalFixed(items) {
 
 こんな感じでマークダウンが書けます。
 
-まあ、この記事を書いている時点で、もうネタ切れ感がすごいですね。次はちゃんとした技術記事書きます。たぶん。
+次はちゃんとした記事書きます。たぶん。
 
 それでは、また。（読んでる人いるのかな）
